--- a/InventoryManagement-frontend/src/app/components/user-list/user-list.component.css
+++ b/InventoryManagement-frontend/src/app/components/user-list/user-list.component.css
@@ -8,13 +8,7 @@ table {
   margin-left: 10px;
 }
 
-.add-update-btn {
-  border-radius: 15px;
-  height: 45px;
-  width: 45px;
-  background-color: #04aa6d;
-  font-weight: 700;
-}
+
 
 .search-bar {
   margin-top: 5px;
@@ -22,7 +16,7 @@ table {
   display: flex;
   justify-content: center;
   height: 40px;
-  background-color: #a9e9d2;
+  background-color: #b59ae3;
 }
 
 .pagination-bar{
@@ -31,7 +25,7 @@ table {
   display: flex;
   justify-content: center;
   height: 40px;
-  background-color: #a9e9d2;
+  background-color: #b59ae3;
 }
 
 input{
@@ -43,7 +37,7 @@ input{
 .search-btn{
   height: 30px;
   margin-top: 5px;
-  background-color: #04aa6d;
+  background-color: #673ab7;
   border: none;
 }
 
@@ -51,7 +45,7 @@ input{
   margin-left: 5px;
   margin-right: 5px;
   height: 30px;
-  background-color: #04aa6d;
+  background-color: #673ab7;
   border: none;
   margin-top: 5px;
 }
@@ -61,3 +55,26 @@ input{
   margin-top: 10px;
   margin-right: 15px;
 }
+
+.user-table {
+  width: 100%;
+  table-layout: fixed;
+}
+
+th, td {
+  overflow: hidden;
+  width: 200px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.mat-row .mat-cell {
+  border-bottom: 1px solid transparent;
+  border-top: 1px solid transparent;
+  cursor: pointer;
+}
+
+.mat-row:hover .mat-cell {
+  border-color: currentColor;
+}
+
