--- a/InventoryManagement-frontend/src/app/components/navigation/navigation.component.html
+++ b/InventoryManagement-frontend/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,7 @@
 <nav>
     <ul>
         <li><a routerLinkActive="active" routerLink="login">Login</a></li>
+        <li><a routerLinkActive="active" routerLink="dashboard">Dashboard</a></li>
         <li><a routerLinkActive="active" routerLink="user-list">User</a></li>
         <li><a routerLinkActive="active" routerLink="product-list">Product</a></li>
         <li><a routerLinkActive="active" routerLink="product-category-list">Product Category</a></li>
