merchant crud and forntend

--- a/InventoryManagement-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/InventoryManagement-frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <div>
-    <div class="row">
+    <div class="row card-div">
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Total User</h5>
+                    <h1 class="card-title">Total User</h1>
                     <p class="card-text">{{userCount}}</p>
                 </div>
             </div>
@@ -11,7 +11,7 @@
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Total Products</h5>
+                    <h1 class="card-title">Total Products</h1>
                     <p class="card-text">{{productCount}}</p>
                 </div>
             </div>
@@ -19,17 +19,17 @@
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Total Product Category</h5>
+                    <h1 class="card-title">Total Product Category</h1>
                     <p class="card-text">{{productCategoryCount}}</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row card-div">
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Total User</h5>
+                    <h1 class="card-title">Total User</h1>
                     <p class="card-text">{{userCount}}</p>
                 </div>
             </div>
@@ -37,7 +37,7 @@
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Total Products</h5>
+                    <h1 class="card-title">Total Products</h1>
                     <p class="card-text">{{productCount}}</p>
                 </div>
             </div>
@@ -45,7 +45,7 @@
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Total Product Category</h5>
+                    <h1 class="card-title">Total Product Category</h1>
                     <p class="card-text">{{productCategoryCount}}</p>
                 </div>
             </div>
