--- a/InventoryManagement-frontend/src/app/components/navigation/navigation.component.html
+++ b/InventoryManagement-frontend/src/app/components/navigation/navigation.component.html
@@ -5,6 +5,7 @@
         <li><a routerLinkActive="active" routerLink="user-list">User</a></li>
         <li><a routerLinkActive="active" routerLink="product-list">Product</a></li>
         <li><a routerLinkActive="active" routerLink="product-category-list">Product Category</a></li>
-        <li><a routerLinkActive="active" routerLink="about">About Us</a></li>
+        <li><a routerLinkActive="active" routerLink="stock">Product Stock</a></li>
+        <li><a routerLinkActive="active" routerLink="merchant-list">Merchants</a></li>
     </ul>
 </nav>
