product category frontend

--- a/InventoryManagement-frontend/src/app/components/product-category-list/product-category-list.component.html
+++ b/InventoryManagement-frontend/src/app/components/product-category-list/product-category-list.component.html
@@ -1,1 +1,45 @@
-<p>product-category-list works!</p>
+<div class="add-update-btn-div">
+    <div class="card">
+        <div class="card-body pd-card">
+            <h2>Add Product Category</h2>
+            <form class="col-12" [formGroup]="productCategoryForm" (ngSubmit)="onSubmit()">
+                <div class="form-row mt-2 mb-2 input-text">
+                    <label class="col-sm-2 col-form-label label-text">
+                        Category
+                    </label>
+                    <input type="text" class="form-control col-sm-10" formControlName="category" name="category"
+                        id="category" />
+                </div>
+
+                <div class="mt-2 mb-1 btn-div">
+                    <button type="submit" class="btn btn-primary btn save-btn">
+                        SAVE
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="display-category">
+    <table mat-table [dataSource]="data" class="mat-elevation-z8 productCategory-table">
+
+        <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef> Category </th>
+            <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let row">
+                <button mat-button (click)="deleteProductCategory(row.id)">
+                    <mat-icon>delete</mat-icon>
+                </button>
+
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
