Product add, delete, list UI

--- a/InventoryManagement-frontend/src/app/components/add-update-product/add-update-product.component.html
+++ b/InventoryManagement-frontend/src/app/components/add-update-product/add-update-product.component.html
@@ -1,1 +1,65 @@
-<p>add-update-product works!</p>
+<div class="add-update-btn-div">
+    <div class="card">
+        <div class="card-body pd-card">
+            <h2> Product Details</h2>
+            <form class="col-12" [formGroup]="productForm" (ngSubmit)="onSubmit()">
+               
+                
+                <div class="form-row mt-2 mb-2 input-text">
+                    <label class="col-sm-2 col-form-label label-text">
+                        Description
+                    </label>
+                    <input type="text" class="form-control col-sm-10" formControlName="description" name="description"
+                        id="description" />
+                </div>
+
+                <div class="form-row mt-2 mb-2 input-text">
+                    <label class="col-sm-2 col-form-label label-text">
+                        Category
+                    </label>
+                    <input type="text" class="form-control col-sm-10" formControlName="category" name="category"
+                        id="description" />
+                </div>
+                <div class="form-row mt-2 mb-2 input-text">
+                    <label class="col-sm-2 col-form-label label-text">
+                        Name
+                    </label>
+                    <input type="text" class="form-control col-sm-10" formControlName="name" name="name"
+                        id="name" />
+                </div>
+
+                <div class="form-row mt-2 mb-2 input-text">
+                    <label class="col-sm-2 col-form-label label-text">
+                        Label
+                    </label>
+                    <input type="text" class="form-control col-sm-10" formControlName="label" name="label"
+                        id="label" />
+                </div>
+
+                <div class="form-row mt-2 mb-2 input-text">
+                    <label class="col-sm-2 col-form-label label-text">
+                        Price
+                    </label>
+                    <input type="text" class="form-control col-sm-10" formControlName="price" name="price"
+                        id="price" />
+                </div>
+
+                
+                <div class="form-row mt-2 mb-2 input-text">
+                    <label class="col-sm-2 col-form-label label-text">
+                        Quality
+                    </label>
+                    <input type="text" class="form-control col-sm-10" formControlName="quality" name="quality"
+                        id="quality" />
+                </div>
+
+
+                <div class="mt-2 mb-1 btn-div">
+                    <button type="submit" class="btn btn-primary btn save-btn">
+                        SAVE
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
