--- a/InventoryManagement-frontend/src/app/components/product/product.component.html
+++ b/InventoryManagement-frontend/src/app/components/product/product.component.html
@@ -3,34 +3,60 @@
         aria-label="Example icon button with a delete icon">
         <mat-icon>add</mat-icon>
     </button>
-    <p>param{{id}}</p>
+ <!-- <p>param{{id}}</p> -->
 </div>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="display-product">
+<table mat-table [dataSource]="data" class="mat-elevation-z8 product-table">
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    <ng-container matColumnDef="productlabel">
+        <th mat-header-cell *matHeaderCellDef> productlabel </th>
+        <td mat-cell *matCellDef="let element"> {{element.productlabel}} </td>
     </ng-container>
 
 
-    <ng-container matColumnDef="userId">
-        <th mat-header-cell *matHeaderCellDef> User Id </th>
-        <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
+    <ng-container matColumnDef="productname">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.productname}} </td>
     </ng-container>
 
-
-    <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef> Title </th>
-        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+    <ng-container matColumnDef="productcategory">
+        <th mat-header-cell *matHeaderCellDef> productcategory </th>
+        <td mat-cell *matCellDef="let element"> {{element.productcategory}} </td>
     </ng-container>
 
-
-    <ng-container matColumnDef="body">
-        <th mat-header-cell *matHeaderCellDef> Body </th>
-        <td mat-cell *matCellDef="let element"> {{element.body}} </td>
+    <ng-container matColumnDef="productquality">
+        <th mat-header-cell *matHeaderCellDef> productquality </th>
+        <td mat-cell *matCellDef="let element"> {{element.productquality}} </td>
     </ng-container>
+
+    <ng-container matColumnDef="productprice">
+        <th mat-header-cell *matHeaderCellDef> productprice </th>
+        <td mat-cell *matCellDef="let element"> {{element.productprice}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="productdescription">
+        <th mat-header-cell *matHeaderCellDef> productdescription </th>
+        <td mat-cell *matCellDef="let element"> {{element.productdescription}} </td>
+    </ng-container>
+
+     <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let row">
+                <button mat-button (click)="deleteProduct(row.id)">
+                    <mat-icon>delete</mat-icon>
+                </button>
+                <button mat-button (click)="updateProduct(row.id)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+
+            </td>
+        </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+</div>
+
+
