stock and payment

--- a/InventoryManagement-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/InventoryManagement-frontend/src/app/components/dashboard/dashboard.component.html
@@ -29,8 +29,8 @@
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
-                    <h1 class="card-title">Total User</h1>
-                    <p class="card-text">{{userCount}}</p>
+                    <h1 class="card-title">Total Merchant</h1>
+                    <p class="card-text">{{merchantCount}}</p>
                 </div>
             </div>
         </div>
