--- a/InventoryManagement-frontend/src/app/components/navigation/navigation.component.html
+++ b/InventoryManagement-frontend/src/app/components/navigation/navigation.component.html
@@ -7,5 +7,6 @@
         <li><a routerLinkActive="active" routerLink="product-category-list">Product Category</a></li>
         <li><a routerLinkActive="active" routerLink="product-stock">Product Stock</a></li>
         <li><a routerLinkActive="active" routerLink="merchant-list">Merchants</a></li>
+        <li><a routerLinkActive="active" routerLink="payment">Payments</a></li>
     </ul>
 </nav>
