--- a/InventoryManagement-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/InventoryManagement-frontend/src/app/components/dashboard/dashboard.component.html
@@ -37,16 +37,16 @@
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
-                    <h1 class="card-title">Total Products</h1>
-                    <p class="card-text">{{productCount}}</p>
+                    <h1 class="card-title">Total Out of stock Products</h1>
+                    <p class="card-text">{{outOfStockProductCount}}</p>
                 </div>
             </div>
         </div>
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
-                    <h1 class="card-title">Total Product Category</h1>
-                    <p class="card-text">{{productCategoryCount}}</p>
+                    <h1 class="card-title">Total Pending Payments</h1>
+                    <p class="card-text">{{pendingPaymentCount}}</p>
                 </div>
             </div>
         </div>
