--- a/InventoryManagement-frontend/src/app/components/login/login.component.css
+++ b/InventoryManagement-frontend/src/app/components/login/login.component.css
@@ -20,3 +20,8 @@ a{
     text-decoration: underline !important;
     color: blue !important;
 }
+
+.save-btn{
+    background-color: #673ab7 !important;
+    border: none !important
+}
