--- a/InventoryManagement-frontend/src/app/components/product-category-list/product-category-list.component.css
+++ b/InventoryManagement-frontend/src/app/components/product-category-list/product-category-list.component.css
@@ -39,3 +39,9 @@ td {
   display: flex;
   justify-content: center;
 }
+
+
+.save-btn{
+  background-color: #673ab7 !important;
+  border: none !important
+}
