--- a/InventoryManagement-frontend/src/app/components/signup/signup.component.css
+++ b/InventoryManagement-frontend/src/app/components/signup/signup.component.css
@@ -15,3 +15,8 @@ button{
 .btn-div{
     text-align: center !important;
 }
+
+.save-btn{
+    background-color: #673ab7 !important;
+    border: none !important
+}
