--- a/InventoryManagement-frontend/src/app/components/add-payment/add-payment.component.css
+++ b/InventoryManagement-frontend/src/app/components/add-payment/add-payment.component.css
@@ -1,14 +1,10 @@
-.personal-details-page{
-    text-align: center;
-}
-
 .pd-card{
-    width: 50em;
+    width: 70em;
     margin: auto;
     margin-top: 10px !important;
 }
 
-h2{
+h2 , h4{
     text-align: center;
 }
 
