--- a/InventoryManagement-frontend/src/app/components/add-update-product/add-update-product.component.css
+++ b/InventoryManagement-frontend/src/app/components/add-update-product/add-update-product.component.css
@@ -11,3 +11,8 @@ h2{
 .btn-div{
     text-align: center;
 }
+
+.save-btn{
+    background-color: #673ab7 !important;
+    border: none !important
+}
