--- a/InventoryManagement-frontend/src/app/components/product-receiving-stock/product-receiving-stock.component.css
+++ b/InventoryManagement-frontend/src/app/components/product-receiving-stock/product-receiving-stock.component.css
@@ -1,6 +1,3 @@
-/* table {
-  width: 100%;
-} */
 
 .add-update-btn-div {
     margin-top: 10px;
@@ -24,7 +21,7 @@
   }
   
   table {
-    width: 50%;
+    width: 100%;
     table-layout: fixed;
   }
   
@@ -51,3 +48,8 @@
     justify-content: center;
   }
   
+  .pay-btn{
+    
+    background-color: #673ab7;
+    font-size: 20px;
+  }
