--- a/InventoryManagement-frontend/src/app/components/product-receiving-stock/product-receiving-stock.component.html
+++ b/InventoryManagement-frontend/src/app/components/product-receiving-stock/product-receiving-stock.component.html
@@ -7,12 +7,13 @@
 
 <div class="display-product-stock">
     <table mat-table [dataSource]="data" class="mat-elevation-z8 product-receiving-stock-table">
-    
-        <ng-container matColumnDef="merchantId">
-            <th mat-header-cell *matHeaderCellDef> Merchant Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.merchantId}} </td>
+
+
+        <ng-container matColumnDef="productName">
+            <th mat-header-cell *matHeaderCellDef> Product Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="merchantName">
             <th mat-header-cell *matHeaderCellDef> Merchant Name </th>
             <td mat-cell *matCellDef="let element"> {{element.merchantName}} </td>
@@ -21,39 +22,17 @@
             <th mat-header-cell *matHeaderCellDef> Quantity </th>
             <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
         </ng-container>
-        <ng-container matColumnDef="productId">
-            <th mat-header-cell *matHeaderCellDef> Product Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
-        </ng-container>
-        <ng-container matColumnDef="productName">
-            <th mat-header-cell *matHeaderCellDef> Product Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
-        </ng-container>
+
         <ng-container matColumnDef="purchasedDate">
             <th mat-header-cell *matHeaderCellDef> Purchased Date </th>
             <td mat-cell *matCellDef="let element"> {{element.purchasedDate}} </td>
         </ng-container>
-    
-        <!-- <ng-container matColumnDef="billing_type">
-            <th mat-header-cell *matHeaderCellDef> Billing Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.billing_type}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="paid_amount">
-            <th mat-header-cell *matHeaderCellDef> Paid Amount </th>
-            <td mat-cell *matCellDef="let element"> {{element.paid_amount}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="last_paid_date">
-            <th mat-header-cell *matHeaderCellDef> Last Paid Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.last_paid_date}} </td>
-        </ng-container> -->
-    
+
         <ng-container matColumnDef="totalPrice">
             <th mat-header-cell *matHeaderCellDef> Total Price </th>
             <td mat-cell *matCellDef="let element"> {{element.totalPrice}} </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="unitPrice">
             <th mat-header-cell *matHeaderCellDef> Unit Price </th>
             <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
@@ -68,9 +47,18 @@
             <th mat-header-cell *matHeaderCellDef> Total Paid Amount </th>
             <td mat-cell *matCellDef="let element"> {{element.totalPaidAmount}} </td>
         </ng-container>
-    
+
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let row">
+                <button class="pay-btn" mat-button (click)="payBill(row.id)" >
+                    PAY BILL
+                </button>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    
-    </div>
+
+</div>
