--- a/InventoryManagement-frontend/src/app/components/merchants-list/merchants-list.component.html
+++ b/InventoryManagement-frontend/src/app/components/merchants-list/merchants-list.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="search-bar">
-    <input type="text" id="searchText" size="50" name="searchText" placeholder="Seach Merchant" value="" />
+    <input type="text" id="searchText" size="50" name="searchText" placeholder="Seach Merchant by email and first name" value="" />
     <button class="search-btn" type="button" value="Serach" name="Serach" (click)="searchMerchant()">Search</button>
 </div>
 
