--- a/InventoryManagement-frontend/src/app/components/user-list/user-list.component.html
+++ b/InventoryManagement-frontend/src/app/components/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 
 <div class="search-bar">
-    <input type="text" id="searchText" size="50" name="searchText" placeholder="Seach User" value="" />
+    <input type="text" id="searchText" size="50" name="searchText" placeholder="Seach User by email and first name" value="" />
     <button class="search-btn" type="button" value="Serach" name="Serach" (click)="searchUser()">Search</button>
 </div>
 
